--- a/src/stylesheets/components/_callout.scss
+++ b/src/stylesheets/components/_callout.scss
@@ -2,16 +2,16 @@
     position: relative;
     padding: 2rem 1rem;
     text-align: center;
-    font-size: calc(1rem + 0.25vw);
+    font-size: 0.875rem;
     background-color: rgba($body-background, 0.925);
     color: $body-font-color;
-    max-width: $global-width * 0.666;
+    max-width: $global-width * 0.6;
     margin: 0 auto;
     box-shadow: 0 0 2rem 0 rgba(#000, 0.75);
 
     @include breakpoint(desktop) {
-        font-size: 1.333rem;
-        padding: 4% 7% 3%;
+        font-size: 1.25rem;
+        padding: 4% 4% 3%;
     }
 
     // border: 3px solid $c-primary;
@@ -22,7 +22,7 @@
     h2 {
         font-size: 1.875em;
         line-height: 1.2;
-        margin: 0 0 0.125em;
+        margin: 0 0;
     }
 
     p {
