--- a/src/stylesheets/components/_testicard.scss
+++ b/src/stylesheets/components/_testicard.scss
@@ -26,32 +26,35 @@
 }
 
 .testicard {
-    font-size: 1.25rem;
+    font-size: 1.125rem;
     position: relative;
-    margin: 0 auto;
+    margin: 1rem auto 0 auto;
     max-width: 40em;
     padding: calc(1.25rem + 1.5%) 0;
     border-radius: 0.25rem;
     height: 100%;
     //width: 100%;
     //color: $white;
-    background-color: rgba(#fff, 0.025);
-    //background-color: $c-secondary;
+    //background-color: rgba(#fff, 0.025);
+    //background-color: #fff;
     //border: 0.5rem solid $c-primary;
     @include breakpoint(tablet) {
-        font-size: 1.5rem;
+        font-size: 1.25rem;
     }
 }
 
 .testicard p {
     //text-align: center;
-    margin-bottom: 4rem;
+    margin-bottom: 3rem;
+    //line-height: 1.8;
     font-weight: $global-weight-medium;
     font-style: italic;
+    //opacity: 0.7;
     //text-transform: uppercase;
 }
 
 .testicard cite {
+    font-size: 0.9375em;
     font-family: $header-font-family;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -65,11 +68,12 @@
 }
 
 .testicard cite img {
-    max-width: 3.5em;
-    border-radius: 50%;
+    max-width: 2.8725em;
+    //border-radius: 50%;
     float: left;
-    margin: -0.5em 0.875em 0 0;
-    border: 3px solid $c-primary;
+    margin: -0.333em 0.5em 0 0;
+    //border: 1px solid currentColor;
+    //display: none;
 }
 
 .testicard cite span {
