--- a/src/stylesheets/components/_sitefooter.scss
+++ b/src/stylesheets/components/_sitefooter.scss
@@ -1,8 +1,11 @@
 .sitefooter {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     font-size: 0.875rem;
+
+    @include breakpoint(tablet) {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 
     a {
         color: $c-primary;
@@ -12,8 +15,19 @@
 
 .sitefooter__section {
     //margin-left: auto;
+    &:last-of-type() {
+        flex-grow: 1;
+    }
+}
 
-    .btn {
-        white-space: nowrap;
+.sitefooter__logo {
+    display: inline-block;
+    width: 75%;
+    max-width: 25rem;
+    margin-top: 2rem;
+
+    @include breakpoint(tablet) {
+        margin: 0 0;
+        float: right;
     }
 }
