--- a/src/stylesheets/components/_btn.scss
+++ b/src/stylesheets/components/_btn.scss
@@ -10,6 +10,7 @@
     line-height: 1.6;
     transition: all 0.1s ease-in;
     padding: 0 0.666em 0 0;
+    font-weight: $global-weight-bold;
 
     &:hover,
     &:focus {
