--- a/src/stylesheets/global/_variables.scss
+++ b/src/stylesheets/global/_variables.scss
@@ -1,7 +1,7 @@
 $c-primary: #f86491; //#ff69b4;
 $c-secondary: #172335; //#0e2241;
 $c-ametist: #675682;
-$c-lightrose: lighten($c-primary, 31%);
+$c-lightrose: #fbf2f3;
 $c-darkgray: #2e2e2e;
 $white: #fefefe;
 $body-font-family: "Raleway", sans-serif;
