--- a/src/stylesheets/components/_siteheader.scss
+++ b/src/stylesheets/components/_siteheader.scss
@@ -2,10 +2,10 @@
     display: flex;
     align-items: center;
     background-color: $c-darkgray;
-    background-image: url(../images/leaves-dark.jpg);
+    background-image: url(../images/flowers-light.svg);
     background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-repeat: repeat;
+    background-size: 800px auto;
     background-position: center top;
     color: $c-lightrose;
 
