--- a/src/stylesheets/components/_hero.scss
+++ b/src/stylesheets/components/_hero.scss
@@ -6,10 +6,10 @@
     margin: 0 auto;
     width: 100%;
     background-color: $c-darkgray;
-    background-image: url(../images/leaves-dark.jpg);
+    background-image: url(../images/flowers-light.svg);
     background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-repeat: repeat;
+    background-size: 800px auto;
     background-position: center top;
     color: $c-lightrose;
     padding: calc(3rem + 2.5vw) 0 calc(3rem + 2.5vw) 1rem;
@@ -29,12 +29,13 @@
 
     @include breakpoint(tablet) {
         padding-left: 6rem;
-        padding-right: 2rem;
+        //padding-right: 2rem;
     }
 
     @include breakpoint(desktop) {
         padding-left: 10rem;
         padding-right: 10rem;
+        min-height: calc(100vh - 7.5rem);
     }
 
     @include breakpoint(largedesktop) {
@@ -122,6 +123,7 @@ p.hero__lead {
     text-transform: uppercase;
     line-height: 1.25em;
     margin: 0 0 1em;
+    //color: $c-primary;
     //max-width: 15em;
     em {
         display: block;
