--- a/src/stylesheets/components/_servicecard.scss
+++ b/src/stylesheets/components/_servicecard.scss
@@ -1,10 +1,10 @@
 .slister {
     background-color: $c-darkgray;
     color: $c-lightrose;
-    background-image: url(../images/leaves-dark.jpg);
+    background-image: url(../images/flowers-light.svg);
     background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-repeat: repeat;
+    background-size: 800px auto;
     background-position: center top;
 
     @media screen and (orientation: portrait) {
