--- a/src/stylesheets/components/_subnav.scss
+++ b/src/stylesheets/components/_subnav.scss
@@ -1,27 +1,50 @@
 .subnav {
-    position: absolute;
-    color: $c-primary;
+    color: $white;
     font-family: $header-font-family;
     font-weight: $global-weight-bold;
-    text-transform: lowercase;
-    transform: rotate(-90deg) translateX(-50%);
-    transform-origin: top left;
-    margin-left: -0.25em;
-    top: 50%;
-    left: 1rem;
+    //text-transform: lowercase;
     font-size: 0.875rem;
+    display: none;
 
     @include breakpoint(tablet) {
+        display: block;
+        color: $c-primary;
+        position: absolute;
+        z-index: 1;
         left: 2rem;
+        transform: rotate(-90deg) translateX(-50%);
+        transform-origin: top left;
+        margin-left: -0.25em;
+        top: 50%;
     }
 
     @include breakpoint(largedesktop) {
         left: 5%;
+        font-size: 1rem;
     }
 
     h3 {
         display: inline-block;
         font-size: 1em;
+    }
+}
+
+.subnav--right {
+    @include breakpoint(tablet) {
+        //position: fixed;
+        left: auto;
+        right: 2rem;
+        top: auto;
+        bottom: 50%;
+        transform: rotate(-90deg) translateX(50%);
+        transform-origin: bottom right;
+        margin-left: 0;
+        margin-right: -0.25em;
+    }
+
+    @include breakpoint(largedesktop) {
+        left: auto;
+        right: 5%;
     }
 }
 
@@ -36,7 +59,7 @@
         &:not(:last-child()) {
             &::after {
                 content: "•";
-                margin: 0 0.5em;
+                margin: 0 0.25em;
                 //content: " · ";
                 //font-weight: $global-weight-normal;
                 //color: $white;
@@ -46,10 +69,14 @@
         > a {
             color: inherit;
             text-decoration: none;
+            padding: 0 0.25em;
 
             &:hover,
             &:focus {
-                color: $white;
+                background-color: $c-primary;
+                color: #fff;
+                //color: darken($c-primary, 10%);
+                //text-decoration: underline;
             }
         }
     }
