--- a/src/stylesheets/global/_layouts.scss
+++ b/src/stylesheets/global/_layouts.scss
@@ -41,13 +41,19 @@
 
     &.patternized {
         background-attachment: fixed;
-        background-repeat: no-repeat;
-        background-size: 100% auto;
+        background-repeat: repeat;
+        background-size: 800px auto;
         background-position: center top;
+        background-image: url(../images/flowers-light.svg);
 
         @media screen and (orientation: portrait) {
             background-size: auto 100vh;
         }
+    }
+
+    &.bordered {
+        border-top: 2px solid $c-lightrose;
+        border-bottom: 2px solid $c-lightrose;
     }
 }
 
@@ -90,7 +96,7 @@
     background-color: lighten($color: $c-primary, $amount: 30%);
 
     &.patternized {
-        background-image: url(../images/leaves-light.jpg);
+        background-image: url(../images/flowers-light.svg);
     }
 }
 
@@ -104,7 +110,7 @@
     color: $white;
 
     &.patternized {
-        background-image: url(../images/leaves-dark.jpg);
+        background-image: url(../images/flowers-light.svg);
     }
 }
 
