--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -14,7 +14,7 @@
 @import "components/hero";
 @import "components/servicecard";
 @import "components/nicetitle";
-@import "components/bio";
+@import "components/picandtext";
 @import "components/testicard";
 @import "components/callout";
 @import "components/pricetable";
