--- a/src/stylesheets/components/_imageswipe.scss
+++ b/src/stylesheets/components/_imageswipe.scss
@@ -32,19 +32,37 @@
         padding-right: 0.9375rem;
     }
 
-    //margin-right: map-get( $grid-margin-gutters, small ) / 2;
-    @include breakpoint(medium) {
-        //margin-left: 0.9375rem;
-        //margin-left: map-get( $grid-margin-gutters, medium );
-        //margin-right: map-get( $grid-margin-gutters, medium ) / 2;
-    }
-
-    @media screen and (min-width: 110em) {
-        //margin-left: 0.4688rem;
-        //margin-right: 0.4688rem;
+    a {
+        display: block;
+        height: 100%;
     }
 
     img {
         height: 100%;
+    }
+
+    .imageswipe--tiny & {
+        height: 33.33vw;
+        max-height: 10rem;
+        margin-left: 0.9375rem;
+
+        a {
+            background-color: $c-primary;
+
+            &:hover,
+            &:focus {
+                background-color: #fff;
+
+                img {
+                    mix-blend-mode: normal;
+                    filter: grayscale(0) brightness(1);
+                }
+            }
+        }
+
+        img {
+            mix-blend-mode: multiply;
+            filter: grayscale(1) brightness(0.5);
+        }
     }
 }
