--- a/src/stylesheets/global/_typography.scss
+++ b/src/stylesheets/global/_typography.scss
@@ -45,7 +45,9 @@ a {
 .lead,
 .lead > p {
     font-size: 1.25rem;
-    font-weight: $global-weight-medium;
+    font-family: $global-weight-medium;
+    // font-weight: $global-weight-bold;
+    // font-family: $header-font-family;
 
     @include breakpoint(phablet) {
         font-size: 1.333rem;
@@ -60,4 +62,11 @@ a {
 .lead--narrow {
     max-width: 44em;
     //margin: 0 0 0 auto;
+}
+
+.twocolumns {
+    @include breakpoint(laptop) {
+        columns: 2;
+        column-gap: 7%;
+    }
 }
