--- a/src/stylesheets/global/_typography.scss
+++ b/src/stylesheets/global/_typography.scss
@@ -70,3 +70,43 @@ a {
         column-gap: 7%;
     }
 }
+
+.copytext {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        break-after: avoid;
+    }
+
+    p {
+        break-inside: avoid;
+    }
+
+    ul,
+    ol {
+        list-style: none;
+        margin: 0 0 0.75em;
+        break-inside: avoid;
+
+        > li {
+            text-indent: 1em;
+            margin: 0 0 0.75em;
+            padding: 0 0 0 1.5em;
+
+            &::before {
+                content: '';
+                //background-clip: content-box;
+                display: inline-block;
+                width: 0.5em;
+                height: 0.5em;
+                border-radius: 50%;
+                margin-right: 1em;
+                background-color: $c-primary;
+                margin-left: -2.5em;
+            }
+        }
+    }
+}
