--- a/src/stylesheets/global/_variables.scss
+++ b/src/stylesheets/global/_variables.scss
@@ -14,3 +14,16 @@ $global-weight-normal: 400;
 $global-width: 84rem;
 $global-font-size: 16px;
 $global-paragraph-margin: 24px;
+
+// Grid Variables
+// Set the number of columns you want to use on your layout.
+$grid-columns: 12;
+// Set the gutter between columns.
+$gutter-width: 1rem;
+// Set a margin for the container sides.
+$outer-margin: 2rem;
+// Create or remove breakpoints for your project
+// Syntax:
+// name SIZErem,
+$breakpoints: sm 48em 46rem, md 62em 61rem, lg 75em 71rem;
+$flexboxgrid-max-width: 1344px;
